	Changed Fitness.trials to an ArrayList pointer
	Modified CompetitiveEvaluator.evalSingleElimination to consider ties so we don't
		have to.
	Addition of context to Fitness, and several new methods and revisions in Fitness,
		Individual, and Job which should make distributed evaluation work 
		propertly with coevolution.	
	Updated coevolve1 to revised approach
	Removed vestigial 'birthday' in Individual
	Modifications to coevolve2 to keep trial #0 as the "best" trial
	Manual updated to reflect new coevolution mechanism
	CoevolutionaryDoubleVectorIndividual deleted
	Bug fixes to MultiPopCoevolutionaryEvaluator
	Bug fix in Fitness.bestTrial would only work properly if trial values were positive
	Added Sum to ECSuite
	Deleted CoevolutionaryRosenbrock
	Modified CoevolutionaryECSuite to use Double.NEGATIVE_INFINITY rather than
		Double.MIN_VALUE
	Modifications to coevolve2/ecsuite.params to make parameters equivalent to
		ecsuite/ecsuite.params
	Added Product and Schwefel to ECSuite
	Modified ECSuite so that Griewangk and Schwefel are scaled to fit into [-5.12, 5.12]
		so as to be comparable with other fitness functions.
	Modified Evolve so it doesn't catch errors in jobs; this doesn't work right with
		the most common error (out of memory)
	griewangk -> griewank
	Added sequential breeding to SimpleBreeder, though it's not implemented in most
		SimpleBreeder subclasses.
	Removed the deletion of trials in the coevolution examples, and added requirement
		that in postProcessPopulation the fitness is only updated if the individual
		doesn't have his evaluated flag set.
	Added sequential evaluation to the Coevolution system. Modified stats files,
		evaluators, etc.
	Modified GroupedProblemForm to require additional parameters to enable sequential
		evaluation.  Had to be done, sorry.
	Bug fixes to SimpleBreeder's handling of elites when doing sequential breeding
	Modifications to ECSuite to make its standard ranges more standard, and added
		San Marino problem 