@@ -36,7 +36,7 @@ import ec.eval.*;
  <li> (if gather-full) how many bytes evaluation took this generation.  This utilization is an approximation only, made by the Java system, and does not take into consideration the possibility of garbage collection (which might make the number negative).
  </ul>
 
- <p>Then the following items appear, per subpopulation:
+ <p>Then, (if gather-subpops) the following items appear, per subpopulation:
  <ul>
  <li> (if gather-full) The average size of an individual this generation
  <li> (if gather-full) The average size of an individual so far in the run
@@ -46,6 +46,18 @@ import ec.eval.*;
  <li> (if gather-full) The size of the best individual this generation
  <li> (if gather-full) The size of the best individual so far in the run
  </ul>
+ 
+ <p>Then the following items appear, for the whole population:
+ <ul>
+ <li> (if gather-full) The average size of an individual this generation
+ <li> (if gather-full) The average size of an individual so far in the run
+ <li> The mean fitness this generation
+ <li> The best fitness this generation
+ <li> The best fitness so far in the run
+ <li> (if gather-full) The size of the best individual this generation
+ <li> (if gather-full) The size of the best individual so far in the run
+ </ul>
+
 
  Compressed files will be overridden on restart from checkpoint; uncompressed files will be 
  appended on restart.
@@ -59,6 +71,9 @@ import ec.eval.*;
  <font size=-1>String (a filename), or nonexistant (signifies stdout)</font></td>
  <td valign=top>(the log for statistics)</td></tr>
  <tr><td valign=top><i>base</i>.<tt>gather-full</tt><br>
+ <font size=-1>bool = <tt>true</tt> or <tt>false</tt> (default)</font></td>
+ <td valign=top>(should we full statistics on individuals (will run slower, though the slowness is due to off-line processing that won't mess up timings)</td></tr>
+ <tr><td valign=top><i>base</i>.<tt>gather-subpops</tt><br>
  <font size=-1>bool = <tt>true</tt> or <tt>false</tt> (default)</font></td>
  <td valign=top>(should we full statistics on individuals (will run slower, though the slowness is due to off-line processing that won't mess up timings)</td></tr>
  </table>
@@ -81,10 +96,14 @@ public class SimpleShortStatistics extends Statistics // implements ProvidesBest
 
     public static final String P_FULL = "gather-full";
 
+    public static final String P_DO_SUBPOPS = "gather-subpops";
+
     public boolean doFull;
+    public boolean doSubpops;
 
     public Individual[] best_of_run;
-    public long lengths[];
+    public long totalSizeSoFar[];
+	public long totalIndsSoFar[];
 
     // timings
     public long lastTime;
@@ -111,6 +130,7 @@ public class SimpleShortStatistics extends Statistics // implements ProvidesBest
                 state.output.fatal("An IOException occurred while trying to create the log " + statisticsFile + ":\n" + i);
                 }
         doFull = state.parameters.getBoolean(base.push(P_FULL),null,false);
+        doSubpops = state.parameters.getBoolean(base.push(P_DO_SUBPOPS),null,false);
         }
 
 
@@ -138,10 +158,11 @@ public class SimpleShortStatistics extends Statistics // implements ProvidesBest
         state.output.print("0 ", statisticslog);
 
         // gather timings       
+		totalSizeSoFar = new long[state.population.subpops.length];
+		totalIndsSoFar = new long[state.population.subpops.length];
+
         if (doFull)
             {
-            lengths = new long[state.population.subpops.length];
-            for(int x=0;x<lengths.length;x++) lengths[x] = 0;
             Runtime r = Runtime.getRuntime();
             long curU =  r.totalMemory() - r.freeMemory();          
             state.output.print("" + (System.currentTimeMillis()-lastTime) + " ",  statisticslog);
@@ -186,6 +207,9 @@ public class SimpleShortStatistics extends Statistics // implements ProvidesBest
             }
         }
 
+
+
+
     /** Prints out the statistics, but does not end with a println --
         this lets overriding methods print additional statistics on the same line */
     protected void _postEvaluationStatistics(final EvolutionState state)
@@ -198,62 +222,111 @@ public class SimpleShortStatistics extends Statistics // implements ProvidesBest
             state.output.print("" + (System.currentTimeMillis()-lastTime) + " ",  statisticslog);
             state.output.print("" + (curU-lastUsage) + " ",  statisticslog);            
             }
-        
-
-        long lengthPerGen = 0;
-        Individual[] best_i = new Individual[state.population.subpops.length];
-        for(int x=0;x<state.population.subpops.length;x++)
+			
+			
+			
+			
+		// gather per-subpopulation statistics
+		int subpops = state.population.subpops.length;				// number of supopulations
+		long[] totalSizeThisGen = new long[subpops];				// per-subpop total size of individuals this generation
+        Individual[] best_i = new Individual[subpops];				// per-subpop best individual this generation
+		double meanFitnessThisGen[] = new double[subpops];			// per-subpop mean fitness this generation
+		
+																	// ALSO THERE IS:
+											// totalIndsSoFar		// total individuals so far per subpopulation
+											// totalSizeSoFar		// total size of individuals so far per subpopulation
+											// best_so_far			// best individual so far per subpopulation
+		
+        for(int x=0;x<subpops;x++)
             {
+			int numInds = state.population.subpops[x].individuals.length;
+			
+			totalIndsSoFar[x] += state.population.subpops[x].individuals.length;
+			for(int y=0;y<numInds;y++)
+				{
+				long size = state.population.subpops[x].individuals[y].size();
+				totalSizeThisGen[x] += size;
+				totalSizeSoFar[x] += size;
+				}
+
             if (doFull)
                 {
-                lengthPerGen = 0;
-                for(int y=0;y<state.population.subpops[x].individuals.length;y++)
-                    {
-                    long size = state.population.subpops[x].individuals[y].size();
-                    lengthPerGen += size;
-                    lengths[x] += size;
-                    }
-
-                state.output.print("" + ((double)lengthPerGen)/state.population.subpops[x].individuals.length + " ",  statisticslog);
-
-                state.output.print("" + ((double)lengths[x])/(state.population.subpops[x].individuals.length * (state.generation + 1)) + " ",  statisticslog);
+                if (doSubpops) state.output.print("" + ((double)totalSizeThisGen[x])/numInds + " ",  statisticslog);			// mean size this gen
+                if (doSubpops) state.output.print("" + ((double)totalSizeSoFar[x])/totalIndsSoFar[x] + " ",  statisticslog);	// mean size so far
                 }
                     
-            // fitness information
-            double meanFitness = 0.0;
-
-            for(int y=0;y<state.population.subpops[x].individuals.length;y++)
+            for(int y=0;y<numInds;y++)
                 {
-                // best individual
+                // find the best individual
                 if (best_i[x]==null ||
                     state.population.subpops[x].individuals[y].fitness.betterThan(best_i[x].fitness))
                     best_i[x] = state.population.subpops[x].individuals[y];
 
-                // mean fitness for population
-                meanFitness += state.population.subpops[x].individuals[y].fitness.fitness();
+                // sum up mean fitness for population
+                meanFitnessThisGen[x] += state.population.subpops[x].individuals[y].fitness.fitness();
                 }
             
             // compute fitness stats
-            meanFitness /= state.population.subpops[x].individuals.length;
-            state.output.print("" + meanFitness + " " + best_i[x].fitness.fitness() + " ",
-                statisticslog);
+            meanFitnessThisGen[x] /= numInds;
+			
+            if (doSubpops) state.output.print("" + meanFitnessThisGen[x] + " " + best_i[x].fitness.fitness() + " ", statisticslog);   // mean and best fitness this gen
 
             // now test to see if it's the new best_of_run[x]
             if (best_of_run[x]==null || best_i[x].fitness.betterThan(best_of_run[x].fitness))
                 best_of_run[x] = (Individual)(best_i[x].clone());
             
-            state.output.print("" + best_of_run[x].fitness.fitness() + " ",
-                statisticslog);
+            if (doSubpops) state.output.print("" + best_of_run[x].fitness.fitness() + " ", statisticslog);							// best fitness so far
 
-            if( doFull )
-                {
-                state.output.print("" + (double)(best_i[x].size()) + " " +
-                    (double)(best_of_run[x].size()) + " ",
-                    statisticslog);
-                }
+			if( doFull )
+				{
+				if (doSubpops) state.output.print("" + (double)(best_i[x].size()) + " " + (double)(best_of_run[x].size()) + " ", statisticslog);		// best size this gen and so far
+				}
             }
-        // we're done!
+  
+  
+  
+		// Now gather per-Population statistics
+		long popTotalInds = 0;
+		long popTotalIndsSoFar = 0;
+		long popTotalSize = 0;
+		long popTotalSizeSoFar = 0;
+		double popMeanFitness = 0;
+		Individual popBestIndividual = best_i[0];
+		Individual popBestIndividualSoFar = best_of_run[0];
+		
+        for(int x=0;x<subpops;x++)
+			{
+			popTotalIndsSoFar += totalIndsSoFar[x];
+			popTotalInds += state.population.subpops[x].individuals.length;
+			popTotalSize += totalSizeThisGen[x];
+			popTotalSizeSoFar += totalSizeSoFar[x];
+			popMeanFitness += meanFitnessThisGen[x];
+			if (x > 0 && best_i[x].fitness.betterThan(popBestIndividual.fitness))
+				popBestIndividual = best_i[x];
+			if (x > 0 && best_of_run[x].fitness.betterThan(popBestIndividualSoFar.fitness))
+				popBestIndividualSoFar = best_of_run[x];
+			}
+		popMeanFitness /= subpops;		// average out
+			
+		if (doFull)
+			{
+			state.output.print("" + popTotalSize / popTotalInds  + " " , statisticslog);						// mean size of pop this gen
+			state.output.print("" + popTotalSizeSoFar / popTotalIndsSoFar + " " , statisticslog);				// mean size of pop so far
+			}
+		state.output.print("" + popMeanFitness + " " , statisticslog);											// mean fitness of pop this gen
+		state.output.print("" + (double)(popBestIndividual.fitness.fitness()) + " " , statisticslog);			// best fitness of pop this gen
+		state.output.print("" + (double)(popBestIndividualSoFar.fitness.fitness()) + " " , statisticslog);		// best fitness of pop so far
+		if (doFull)
+			{
+			state.output.print("" + (double)(popBestIndividual.size()) + " " , statisticslog);					// size of best ind of pop this gen
+			state.output.print("" + (double)(popBestIndividualSoFar.size()) + " " , statisticslog);				// size of best ind of pop so far
+			}
+		
+		// we're done!
         }
+
+
+
 
     public void postEvaluationStatistics(final EvolutionState state)
         {
